align and footer fix

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,8 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
   margin-left: 10px;
+  padding-top: 30px;
+  /* margin-bottom: 50px; */
 
 }
 
